implementazione spostamento categoria, archiviazione thread, ban utente e aggiunta parametro auth_token a User e db